# airsoftclub

./: .env-example  .env.example  README.md  docker-compose.yml  setup-dev.bat  setup-dev.sh
backend/: .coverage  .env-example  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  test.db
backend/alembic/versions/: 057298154060_.py  3cfe29e212f0_.py  537e3b188974_.py  afc4f0f71a90_.py  e30c9927c8a6_.py  e3ee5437cdd8_.py  e8d1fd984644_.py
backend/app/core/: database.py  settings.py
backend/app/endpoints/: auth.py  bookings.py  fields.py  games.py  router.py  squads.py  users.py
backend/app/models/: __init__.py  base.py  booking.py  field.py  file.py  game.py  mixins.py  squad.py  team.py  user.py
backend/app/permissions/: squads.py
backend/app/repositories/: __init__.py  bookings.py  fields.py  file.py  games.py  squads.py  teams.py  users.py
backend/app/schemas/: auth.py  bookings.py  fields.py  file.py  files.py  games.py  squads.py  teams.py  users.py
backend/app/security/: auth.py  password.py
backend/db/: env.py
backend/db/versions/: 20240202180536_create_initial_tables.py
backend/features/: auth.feature  bookings.feature  environment.py  fields.feature  games.feature  squads.feature  users.feature
backend/features/steps/: common.py
backend/setup/: build.sh  reset_db.sh  setup_db.sh
backend/setup/utils/: create_db.sh  create_db_user.sh  drop_db.sh
backend/tests/: conftest.py  test_bookings.py  test_fields.py  test_games.py  test_users.py
backend/tests/endpoints/: test_auth.py  test_bookings.py  test_fields.py  test_games.py  test_squads.py  test_users.py
backend/tests/factories/: __init__.py  booking.py  booking_factory.py  field.py  field_factory.py  game.py  game_factory.py  google_token.py  squad.py  team.py  team_factory.py  user.py  user_factory.py
frontend/: .env.local-example  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json
frontend/.storybook/: main.ts  preview.ts
frontend/actions/: get-token-action.ts  google-login-action.ts  login-action.ts  logout-action.ts  refresh-token-action.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/fields/: page.tsx
frontend/contexts/: auth-context.tsx
frontend/services/: axios-service.ts  axiosService.ts
frontend/store/: store.ts
frontend/types/: env.d.ts  globals.d.ts
(+28 files in other folders)
