[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nicolas Kasevich <n.kasevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.27.1"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
mock = "^5.1.0"
pytest-pretty = "^1.2.0"
factory-boy = "^3.3.0"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.0"
ipython = "^8.21.0"
ipdb = "^0.13.13"
freezegun = "^1.4.0"
behave = "^1.2.6"
pyyaml = "^6.0.1"
deepdiff = "^6.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    ".venv/*",
]

[tool.ruff]
src = ["app", "tests"]
line-length = 88
lint.ignore = [
    "E501",
    "F722",
]
lint.select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "ERA", # eradicate (removes commented out code)
    "F",   # pyflakes
    "I",   # isort
    "PLC", # pylint
    "SIM", # flake8-simplify
    "TID", # tidy-imports
    "W",   # warnings
]

[tool.flake8]
max-line-length = 88
